# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1114 2009/12/22 15:32:38 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/12/21) Added the ability to hide the Queue, SLA and/or Service in
    the Customer interface.
 - (2009/12/16) Fixed bug#4503 - Border around image does not display well
    in some email clients.
 - (2009/12/15) Changed rich text editor from FCKEditor 2.6.4.1 to CKEditor 3.0.1
 - (2009/12/14) Fixed bug#4660 - Admin Notification module does not send mail
    to customer users in groups.
 - (2009/12/14) Added the ability to use AdminEmail to send notifications based
    on roles.
 - (2009/12/14) Updated SysConfig to have toolbars and Admin section to use
    plural in interface where appropriate.
 - (2009/12/11) Replaced all OptionStrgHashRef() with the newer BuildSelection().
 - (2009/12/09) Added archive feature to improve performance.
 - (2009/12/09) Updated CPAN module Text::CSV to version 1.16.
 - (2009/12/08) Fixed bug#4570 - Not processed attachment on incoming email
    (value too long for type).
    Increased varchar of article_attachment.content_type from 250 to 450.
 - (2009/12/08) Fixed bug#1698 - Send emails with the real name from the agent.
 - (2009/12/08) Fixed bug#2153 - Recognize domain names only if they are words.
 - (2009/12/08) Fixed bug#4399 - Phone- / Email-Ticket AJAX reload does not
    consider ACL in Kernel/Config.pm.
 - (2009/12/08) Fixed bug#4330 - Added new history-get results.
 - (2009/12/07) Fixed bug#3887 - Processing headers with faulty charset definitions.
 - (2009/12/04) Removed OptionElement() from Layout.pm. Use BuildSelection()
    instead.
 - (2009/12/04) Changed line chart library again: from OFC to Flot.